[project]
name = "hooda-race-planner"
version = "1.0.0"
description = "HoodaRunners Race Planner Agent"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform[agent_engines,adk]>=1.87.0",
    "google-adk>=1.0.0",
    "a2a-sdk>=0.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["race_planner_agent"]
